--- a/src/main/resources/fxml/Employee Details.fxml
+++ b/src/main/resources/fxml/Employee Details.fxml
@@ -1,166 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="649.0" styleClass="dash" stylesheets="@../OneDrive/Desktop/New%20folder/dash.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <left>
-      <VBox prefHeight="399.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.EmployeeController">
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="704.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="86.0">
-                     <graphic>
-                        <ImageView fx:id="dash" fitHeight="53.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../OneDrive/Desktop/New%20folder/DESIGN.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <TextField fx:id="searchemp" alignment="CENTER" prefHeight="24.0" prefWidth="200.0" promptText="Search Employee">
+                     <HBox.margin>
+                        <Insets top="15.0" />
+                     </HBox.margin></TextField>
+                  <Region prefHeight="72.0" prefWidth="25.0" />
+                  <Button fx:id="addbutton" layoutX="170.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addemployee" text="Add">
+                     <HBox.margin>
+                        <Insets left="10.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Region prefHeight="50.0" prefWidth="14.0" />
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="71.0" text="Remove">
+                     <HBox.margin>
+                        <Insets top="15.0" />
+                     </HBox.margin>
                   </Button>
                </children>
             </HBox>
-            <Region prefHeight="242.0" prefWidth="100.0" />
-            <Button fx:id="logout" alignment="CENTER" mnemonicParsing="false" prefHeight="70.0" prefWidth="86.0">
-               <graphic>
-                  <ImageView fitHeight="36.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../OneDrive/Desktop/New%20folder/log.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </VBox>
-   </left>
-   <center>
-      <VBox prefHeight="471.0" prefWidth="554.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="500.0">
-               <children>
-                  <Label text="Employee Details" textFill="#0a4f84">
-                     <font>
-                        <Font name="System Bold" size="30.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <Region prefHeight="35.0" prefWidth="446.0" />
-            <HBox prefHeight="226.0" prefWidth="500.0">
-               <children>
-                  <Region prefHeight="170.0" prefWidth="43.0" HBox.hgrow="ALWAYS" />
-                  <GridPane alignment="CENTER" hgap="5.0" prefHeight="216.0" prefWidth="426.0" vgap="20.0" HBox.hgrow="ALWAYS">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="31.59998168945313" minHeight="10.0" prefHeight="28.400000000000006" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="31.600012207031256" minHeight="10.0" prefHeight="28.400000000000006" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <Label prefHeight="42.0" prefWidth="281.0" text="First Name" textFill="#1c5d91" underline="true">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="349.0" text="Last Name" textFill="#1c5d91" underline="true" GridPane.rowIndex="1">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="E-mail" textFill="#1c5d91" underline="true" GridPane.rowIndex="2">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#1c5d91" underline="true" GridPane.rowIndex="3">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Hire Date" textFill="#1c5d91" underline="true" GridPane.rowIndex="4">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="122.0" prefHeight="42.0" prefWidth="312.0" text="Date Of Birth" textFill="#1c5d91" underline="true" GridPane.rowIndex="5">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="150.0" prefHeight="42.0" prefWidth="312.0" text="Gender" textFill="#1c5d91" underline="true" GridPane.rowIndex="6">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="180.0" prefHeight="42.0" prefWidth="312.0" text="Salary" textFill="#1c5d91" underline="true" GridPane.rowIndex="7">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="firstname" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="lastname" layoutX="214.0" layoutY="4.0" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="phonenumber" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="email" layoutX="214.0" layoutY="95.0" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="hiredate" layoutX="214.0" layoutY="65.0" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="dob" layoutX="214.0" layoutY="124.0" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="gender" layoutX="214.0" layoutY="154.0" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="salary" layoutX="214.0" layoutY="185.0" prefHeight="18.0" prefWidth="216.0" textFill="#1c5d91" GridPane.columnIndex="1" GridPane.rowIndex="7">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </GridPane>
-                  <Region prefHeight="170.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
+            <TableView fx:id="tableview" prefHeight="349.0" prefWidth="499.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TableColumn fx:id="namecol" prefWidth="110.4000244140625" text="Name" />
+                <TableColumn fx:id="idcol" minWidth="0.0" prefWidth="135.199951171875" text="ID" />
+                  <TableColumn fx:id="phonecol" prefWidth="136.79998779296875" text="Phone Number" />
+                  <TableColumn fx:id="gendercall" prefWidth="75.0" text="Gender" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
          </children>
       </VBox>
    </center>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="76.0" prefWidth="100.0">
+               <children>
+                  <Label prefHeight="44.0" prefWidth="100.0" text="     BYTE_ME" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </left>
 </BorderPane>
