--- a/src/main/resources/fxml/addemployee.fxml
+++ b/src/main/resources/fxml/addemployee.fxml
@@ -13,13 +13,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="649.0" styleClass="abcd" stylesheets="@background/abcd.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.EmployeeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="649.0" styleClass="abcd" stylesheets="@background/abcd.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.AddEmployeeController">
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="61.0" prefWidth="138.0" text="BYTE_ME" textFill="#59eaff" HBox.hgrow="ALWAYS">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="61.0" prefWidth="138.0" text="BYTE_ME" textFill="#14727e" HBox.hgrow="ALWAYS">
                      <font>
                         <Font name="Century" size="17.0" />
                      </font></Label>
@@ -100,14 +100,14 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField style="-fx-background-radius: 10;" GridPane.columnIndex="1" />
-                        <TextField layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField layoutX="223.0" layoutY="126.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <TextField layoutX="223.0" layoutY="157.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <TextField layoutX="223.0" layoutY="189.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <TextField fx:id="firstname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" />
+                        <TextField fx:id="lastname" layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="email" layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="hiredate" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="dob" layoutX="223.0" layoutY="126.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="gender" layoutX="223.0" layoutY="157.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="salary" layoutX="223.0" layoutY="189.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                      </children>
                   </GridPane>
                   <Region prefHeight="235.0" prefWidth="96.0" HBox.hgrow="ALWAYS" />
@@ -123,9 +123,9 @@
                               <Cursor fx:constant="V_RESIZE" />
                            </cursor>
                         </Region>
-                        <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="#92b7ff" />
+                        <Button fx:id="addbutton1" mnemonicParsing="false" onMouseClicked="#addnow" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="#92b7ff" />
                         <Region layoutX="10.0" layoutY="10.0" prefHeight="56.0" prefWidth="49.0" />
-                        <Button layoutX="102.0" layoutY="10.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="#92b7ff" />
+                        <Button fx:id="cancelbutton1" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#cancelnow" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="#92b7ff" />
                      </children>
                   </HBox>
                </children>
