--- a/src/main/resources/fxml/addemployee.fxml
+++ b/src/main/resources/fxml/addemployee.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -31,7 +32,7 @@
    <center>
       <VBox prefHeight="471.0" prefWidth="554.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="500.0">
+            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="550.0">
                <children>
                   <Label text="Add New Employee" textFill="#13336e">
                      <font>
@@ -44,12 +45,17 @@
             <HBox prefHeight="226.0" prefWidth="500.0">
                <children>
                   <Region prefHeight="170.0" prefWidth="43.0" HBox.hgrow="ALWAYS" />
-                  <GridPane alignment="CENTER" hgap="5.0" prefHeight="238.0" prefWidth="420.0" vgap="25.0" HBox.hgrow="ALWAYS">
+                  <GridPane alignment="CENTER" hgap="5.0" prefHeight="306.0" prefWidth="422.0" vgap="25.0" HBox.hgrow="ALWAYS">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
+                        <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                        <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                        <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                        <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                        <RowConstraints maxHeight="10.399999999999999" minHeight="10.0" prefHeight="10.399999999999999" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -60,54 +66,65 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label prefHeight="42.0" prefWidth="281.0" text="First Name" textFill="#13336e" underline="true">
+                        <Label layoutX="10.0" layoutY="247.0" prefHeight="42.0" prefWidth="312.0" text="Employee ID" textFill="#13336e" underline="true" GridPane.rowIndex="4">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="349.0" text="Last Name" textFill="#13336e" underline="true" GridPane.rowIndex="1">
+                        <Label prefHeight="42.0" prefWidth="281.0" text="First Name" textFill="#13336e" underline="true" GridPane.rowIndex="5">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="E-mail" textFill="#13336e" underline="true" GridPane.rowIndex="2">
+                        <Label layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="349.0" text="Last Name" textFill="#13336e" underline="true" GridPane.rowIndex="6">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#13336e" underline="true" GridPane.rowIndex="3">
+                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="E-mail" textFill="#13336e" underline="true" GridPane.rowIndex="7">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Hire Date" textFill="#13336e" underline="true" GridPane.rowIndex="4">
+                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#13336e" underline="true" GridPane.rowIndex="8">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="122.0" prefHeight="42.0" prefWidth="312.0" text="Date Of Birth" textFill="#13336e" underline="true" GridPane.rowIndex="5">
+                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Hire Date" textFill="#13336e" underline="true" GridPane.rowIndex="9">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="150.0" prefHeight="42.0" prefWidth="312.0" text="Gender" textFill="#13336e" underline="true" GridPane.rowIndex="6">
+                        <Label layoutX="10.0" layoutY="122.0" prefHeight="42.0" prefWidth="312.0" text="Date Of Birth" textFill="#13336e" underline="true" GridPane.rowIndex="10">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="180.0" prefHeight="42.0" prefWidth="312.0" text="Salary" textFill="#13336e" underline="true" GridPane.rowIndex="7">
+                        <Label layoutX="10.0" layoutY="150.0" prefHeight="42.0" prefWidth="312.0" text="Gender" textFill="#13336e" underline="true" GridPane.rowIndex="11">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="firstname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" />
-                        <TextField fx:id="lastname" layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="email" layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="hiredate" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="dob" layoutX="223.0" layoutY="126.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <TextField fx:id="gender" layoutX="223.0" layoutY="157.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <TextField fx:id="salary" layoutX="223.0" layoutY="189.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label layoutX="10.0" layoutY="180.0" prefHeight="42.0" prefWidth="312.0" text="Salary" textFill="#13336e" underline="true" GridPane.rowIndex="12">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="firstname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="lastname" layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="email" layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <TextField fx:id="hiredate" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                        <TextField fx:id="dob" layoutX="223.0" layoutY="126.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                        <TextField fx:id="gender" layoutX="223.0" layoutY="157.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+                        <TextField fx:id="salary" layoutX="223.0" layoutY="189.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+                        <TextField fx:id="empid" layoutX="221.0" layoutY="249.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="warninglabel" alignment="CENTER" prefHeight="18.0" prefWidth="242.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="40.0" />
+                           </GridPane.margin>
+                        </Label>
                      </children>
                   </GridPane>
                   <Region prefHeight="235.0" prefWidth="96.0" HBox.hgrow="ALWAYS" />
@@ -123,9 +140,9 @@
                               <Cursor fx:constant="V_RESIZE" />
                            </cursor>
                         </Region>
-                        <Button fx:id="addbutton1" mnemonicParsing="false" onMouseClicked="#addnow" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="#92b7ff" />
+                        <Button fx:id="addbutton1" mnemonicParsing="false" onMouseClicked="#addnow" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="#eff5ff" />
                         <Region layoutX="10.0" layoutY="10.0" prefHeight="56.0" prefWidth="49.0" />
-                        <Button fx:id="cancelbutton1" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#cancelnow" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="#92b7ff" />
+                        <Button fx:id="cancelbutton1" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#cancelnow" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="#e5eeff" />
                      </children>
                   </HBox>
                </children>
