--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -25,7 +25,7 @@
                </font>
             </Button>
             <Region layoutX="10.0" layoutY="214.0" prefHeight="20.0" prefWidth="386.0" />
-            <Button layoutX="73.0" layoutY="184.0" maxWidth="300.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="170.0" style="-fx-background-color: #1f068c; -fx-background-radius: 20;" text="Customer Details" textFill="#adbed4">
+            <Button fx:id="customerdetails" layoutX="73.0" layoutY="184.0" maxWidth="300.0" mnemonicParsing="false" onMouseClicked="#customerdetailsopen" prefHeight="50.0" prefWidth="170.0" style="-fx-background-color: #1f068c; -fx-background-radius: 20;" text="Customer Details" textFill="#adbed4">
                <font>
                   <Font size="16.0" />
                </font>
